k8s/user-apps/memos/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memos-server
  labels: &labels
    app.kubernetes.io/name: memos-server
spec:
  selector:
    matchLabels: *labels
  template:
    metadata:
      labels: *labels
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: memos-data
      containers:
        - name: memos-server
          image: ghcr.io/usememos/memos
          imagePullPolicy: Always
          volumeMounts:
            - name: data
              mountPath: /var/opt/memos
          ports:
            - name: http
              containerPort: 5230
          readinessProbe:
            httpGet:
              port: http
