k8s/user-apps/memos/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: memos-server
  labels: &labels
    app.kubernetes.io/name: memos-server
spec:
  selector: *labels
  ports:
    - name: http
      port: 80
      targetPort: http
